--- a/nmcnpmapp/templates/app/wait.html
+++ b/nmcnpmapp/templates/app/wait.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trang chủ - Hệ thống Quản lý Thu phí</title>
 
-    <link rel="stylesheet" href="/static/css/home.css">
+    <link rel="stylesheet" href="/static/css/wait.css">
     <link rel="stylesheet" href="/static/css/newstyles.css">
     <link rel="stylesheet" href="/static/css/responsive-tablet.css">
     <link rel="stylesheet" href="/static/css/responsive-mobile.css">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
 </head>
 <body>
@@ -67,32 +67,13 @@
     </header>
 
     <!-- Main Content -->
-    <div class="container mt-4">
-
-        <!-- News Section -->
-        <div class="row mt-5">
-            <div class="col-md-12">
-                <h3>Tin tức mới</h3>
-                <div class="list-group">
-                    <a href="#" class="list-group-item list-group-item-action">
-                        <h5 class="mb-1">Cập nhật hệ thống mới</h5>
-                        <p class="mb-1">Phiên bản mới của hệ thống đã được cập nhật với các tính năng quản lý tài chính nâng cao và bảo mật tốt hơn.</p>
-                        <small>Ngày đăng: 01/11/2024</small>
-                    </a>
-                    <a href="#" class="list-group-item list-group-item-action">
-                        <h5 class="mb-1">Hướng dẫn sử dụng hệ thống</h5>
-                        <p class="mb-1">Hãy xem các tài liệu hướng dẫn để biết thêm về các chức năng quản lý thu phí.</p>
-                        <small>Ngày đăng: 25/10/2024</small>
-                    </a>
-                    <a href="#" class="list-group-item list-group-item-action">
-                        <h5 class="mb-1">Thông báo bảo trì hệ thống</h5>
-                        <p class="mb-1">Hệ thống sẽ được bảo trì vào ngày 10/11/2024. Quý khách vui lòng không truy cập trong thời gian này.</p>
-                        <small>Ngày đăng: 20/10/2024</small>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
+    <main>
+        <section>
+            <h3>Chờ phê duyệt</h3>
+            <p>Xin chào bạn, thông tin của bạn hiện đang được chờ phê duyệt từ quản trị viên.</p>
+            <p>Vui lòng chờ 1 thời gian ngắn trước khi sử dụng dịch vụ!</p>
+        </section>
+    </main>
 
     <!-- Footer -->
     <footer class="footer mt-auto py-3">
@@ -104,6 +85,16 @@
     <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
 </html>
 
