--- a/nmcnpmapp/templates/registration/login.html
+++ b/nmcnpmapp/templates/registration/login.html
@@ -31,7 +31,8 @@
                 <li class="nav-item"><a class="nav-link" href="/contact">Liên hệ</a></li>
                 <li class="nav-item"><a class="nav-link" href="/notification">Thông báo</a></li>                
             </ul>
-            <div class="navbar-nav">
+            
+            <div class="custom-div3">
                 <a class="btn btn-outline-primary mr-2" href="/login">Đăng nhập</a>
                 <a class="btn btn-outline-success" href="/signup">Đăng ký</a>
             </div>
@@ -52,21 +53,21 @@
                             <div class="col-md-6 col-lg-7 d-flex align-items-center">
                                 <div class="card-body p-4 p-lg-5 text-black">
 
-                                    <form>
-
+                                    <form method="post">
+                                        {% csrf_token %}
                                         <div class="d-flex align-items-center mb-3 pb-1">
                                             <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
                                             <span class="h1 fw-bold mb-0">Quản lý chung cư</span>
                                         </div>
 
                                         <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Đăng nhập</h5>
-
+                                        
                                         <div class="form-outline mb-4">
-                                            <input type="email" id="form2Example17" class="form-control form-control-lg" placeholder="Tên đăng nhập" />
+                                            <input type="text" id="username" name="username" class="form-control form-control-lg" placeholder="Tên đăng nhập" />
                                         </div>
 
                                         <div class="form-outline mb-4">
-                                            <input type="password" id="form2Example27" class="form-control form-control-lg" placeholder="Mật khẩu" />
+                                            <input type="password" id="password" name="password" class="form-control form-control-lg" placeholder="Mật khẩu" />
                                         </div>
 
                                         <div class="pt-1 mb-4">
