--- a/nmcnpmapp/templates/registration/signup.html
+++ b/nmcnpmapp/templates/registration/signup.html
@@ -58,13 +58,16 @@
                                             <span class="h1 fw-bold mb-0">Đăng ký tài khoản</span>
                                         </div>
                                         <div class="form-group" style="margin-top: 20px;">
-                                        <input type="text" class="form-control" id="email" name="email" placeholder="Email của bạn">
+                                        <input type="text" class="form-control" id="registry_email" name="registry_email" placeholder="Email của bạn">
                                         </div>
                                         <div class="form-group" style="margin-top: 20px;">
                                             <input type="text" class="form-control" id="username" name="username" placeholder="Username của bạn">
                                         </div>
                                         <div class="form-group" style="margin-top: 20px;">
-                                            <input type="text" class="form-control" id="username" name="username" placeholder="Số phòng">
+                                            <input type="text" class="form-control" id="phone_number" name="phone_number" placeholder="Số điện thoại">
+                                        </div>
+                                        <div class="form-group" style="margin-top: 20px;">
+                                            <input type="text" class="form-control" id="room_id" name="room_id" placeholder="Số phòng">
                                         </div>
                                         <div class="form-group" style="margin-top: 20px;">
                                             <input type="password" class="form-control" id="password1" name="password1" placeholder="Mật khẩu của bạn">
@@ -75,7 +78,7 @@
                                         </div>
 
                                         <div class="pt-1 mb-4">
-                                            <button class="btn btn-dark btn-lg btn-block" type="button">Đăng ký</button>
+                                            <button class="btn btn-dark btn-lg btn-block" type="submit">Đăng ký</button>
                                         </div>
 
                                         <p class="mb-4 pb-lg-2" style="color: #393f81;">Đã có tài khoản? <a href="/login"
