--- a/nmcnpmapp/templates/app/homepage.html
+++ b/nmcnpmapp/templates/app/homepage.html
@@ -1,21 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trang chủ - Hệ thống Quản lý Thu phí</title>
-
-    <link rel="stylesheet" href="/static/css/home.css">
-    <link rel="stylesheet" href="/static/css/newstyles.css">
-    <link rel="stylesheet" href="/static/css/responsive-tablet.css">
-    <link rel="stylesheet" href="/static/css/responsive-mobile.css">
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Thông báo - Hệ thống Quản lý Thu phí</title>
+    
+        <!-- Load the static files tag library -->
+        {% load static %}
+    
+        <!-- Stylesheets -->
+        <link rel="stylesheet" href="{% static 'css/home.css' %}">
+        <link rel="stylesheet" href="{% static 'css/newstyles.css' %}">
+        <link rel="stylesheet" href="{% static 'css/responsive-tablet.css' %}">
+        <link rel="stylesheet" href="{% static 'css/responsive-mobile.css' %}">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+        <style>
+            /* CSS for a sticky footer */
+            body, html {
+                height: 100%;
+                margin: 0;
+                display: flex;
+                flex-direction: column;
+            }
+    
+            .content {
+                flex: 1;
+            }
+    
+            .footer {
+                background-color: #f8f9fa;
+                padding: 10px 0;
+            }
+        </style>
+    </head>
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -29,7 +46,7 @@
                 <li class="nav-item"><a class="nav-link" href="/service">Dịch vụ</a></li>
                 <li class="nav-item"><a class="nav-link" href="/about">Giới thiệu</a></li>
                 <li class="nav-item"><a class="nav-link" href="/contact">Liên hệ</a></li>                
-                <li class="nav-item"><a class="nav-link" href="/contact">Thông báo</a></li>                
+                <li class="nav-item"><a class="nav-link" href="/notification">Thông báo</a></li>                
             </ul>
             {% if user.is_approved %}
             <div class="custom-div3">
