--- a/nmcnpmapp/templates/app/service.html
+++ b/nmcnpmapp/templates/app/service.html
@@ -2,19 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trang chủ - Hệ thống Quản lý Thu phí</title>
-    {% load static %}
-    <link rel="stylesheet" href="/static/css/home.css">
-    <link rel="stylesheet" href="/static/css/newstyles.css">
-    <link rel="stylesheet" href="/static/css/responsive-tablet.css">
-    <link rel="stylesheet" href="/static/css/responsive-mobile.css">
+    <title>Thông báo - Hệ thống Quản lý Thu phí</title>
 
+    {% load static %}
+    
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="{% static 'css/home.css' %}">
+    <link rel="stylesheet" href="{% static 'css/newstyles.css' %}">
+    <link rel="stylesheet" href="{% static 'css/responsive-tablet.css' %}">
+    <link rel="stylesheet" href="{% static 'css/responsive-mobile.css' %}">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
 </head>
 <body>
     <!-- Navbar -->
@@ -26,21 +24,17 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active"><a class="nav-link" href="/">Trang chủ</a></li>
-                <li class="nav-item"><a class="nav-link" href="/service">Dịch vụ</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'list_member' %}">Dịch vụ</a></li> <!-- Redirect to list_member -->
                 <li class="nav-item"><a class="nav-link" href="/about">Giới thiệu</a></li>
-                <li class="nav-item"><a class="nav-link" href="/contact">Liên hệ</a></li>                
-                <li class="nav-item"><a class="nav-link" href="/contact">Thông báo</a></li>                
+                <li class="nav-item"><a class="nav-link" href="/contact">Liên hệ</a></li>
+                <li class="nav-item"><a class="nav-link" href="/notification">Thông báo</a></li>
             </ul>
-            {% if user.is_approved %}
+            {% if user.is_authenticated %}
             <div class="custom-div3">
                 <button class="user">{{ user.username }}</button>
                 <ul class="sub-user">
-                    <li>
-                        <a href="/changepassword">Đổi mật khẩu</a>
-                    </li>
-                    <li>
-                        <a href="/logout">Đăng xuất</a>
-                    </li>
+                    <li><a href="/changepassword">Đổi mật khẩu</a></li>
+                    <li><a href="/logout">Đăng xuất</a></li>
                 </ul>
             </div>
             {% else %}
@@ -51,170 +45,109 @@
             {% endif %}
         </div>
     </nav>
+  </head>
+  <style>
+    /* CSS for a sticky footer */
+    body, html {
+        height: 100%;
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .content {
+        flex: 1;
+    }
+
+    .footer {
+        background-color: #f8f9fa;
+        padding: 10px 0;
+        text-align: center; /* Center-align the footer text */
+    }
+</style>
+</head>
 
     <!-- Header -->
     <header class="homepage-header" style="background-color: #007bff; color: white; text-align: center; padding: 50px 0;">
         <div class="govuk-width-container">
-            <div class="homepage-header__title-container">
-                <h1 class="homepage-header__title" style="font-size: 2.5rem; font-weight: bold;">
-                    Hệ thống Quản lý Thu phí
-                </h1>
-                <span class="homepage-header__intro" style="font-size: 1.5rem; font-weight: bold;">
-                    Chung cư CNPM - Hà Nội
-                </span>
-            </div>
+            <h1 class="homepage-header__title">Hệ thống Quản lý Thu phí</h1>
+            <span class="homepage-header__intro">Chung cư CNPM - Hà Nội</span>
         </div>
     </header>
 
-    <!-- Content -->
-    <main class="special-main" style="margin-top: 5%;">
+    <!-- Content Section -->
+    <main class="content">
         <section>
-          <h3 style="text-align: center; padding-top: 20px;">Cổng dịch vụ tổ dân phố</h3>
-          <br />
-          <p style="padding-bottom: 10px; text-align: center;">
-            <b style="font-size: larger;">Vui lòng chọn các tùy chọn dịch vụ dưới đây</b>
-          </p>
-          <div id="service1">
-            <a href="#" data-toggle="modal" data-target="#service1Modal" style="color: black;"><img
-                src="{% static 'icon/home.svg' %}" alt="family" style="margin-right: 10px; margin-bottom: 5px;" />Xem thông
-              tin thành viên trong gia đình</a>
-          </div>
-          <div id="service2">
-            <a href="#" data-toggle="modal" data-target="#service2Modal" style="color: black;"><img
-                src="{% static 'icon/money.svg' %}" alt="money" style="margin-right: 10px; margin-bottom: 5px;" />Xem tình
-              trạng đóng phí cho tổ dân phố</a>
-          </div>
-          <div id="service3">
-            <a href="#" data-toggle="modal" data-target="#service3Modal" style="color: black;"><img
-                src="{% static 'icon/layout-list-thumb.svg' %}" alt="list"
-                style="margin-right: 10px; margin-bottom: 5px;" />Xem danh sách đóng góp cho tổ dân phố </a>
-          </div>
+            <h3 class="text-center py-4">Cổng dịch vụ tổ dân phố</h3>
+            <p class="text-center"><b>Vui lòng chọn các tùy chọn dịch vụ dưới đây</b></p>
+            <div class="text-center">
+                <!-- Direct link to the list_member page -->
+                <a href="{% url 'list_member' %}" class="service-option">
+                    <img src="{% static 'icon/home.svg' %}" alt="family"> Xem thông tin thành viên trong gia đình
+                </a>
+                <a href="{% url 'add_member' %}" class="service-option">
+                    <img src="{% static 'icon/home.svg' %}" alt="family"> Thêm thông tin thành viên trong gia đình
+                </a>
+                <a href="#" data-toggle="modal" data-target="#service2Modal" class="service-option">
+                    <img src="{% static 'icon/money.svg' %}" alt="money"> Xem tình trạng đóng phí
+                </a>
+            </div>
         </section>
-      </main>
-    
-    <!-- Modal 1 -->
-    <div class="modal fade" id="service1Modal" tabindex="-1" role="dialog" aria-labelledby="service1ModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="service1ModalLabel">Thông tin thành viên trong gia đình</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        </div>
-        <div class="modal-body">
-          <table class="table">
-            <thead>
-            <tr>
-              <th scope="col">Mã hộ khẩu</th>
-              <th scope="col">Thành viên gia đình</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for group in user.groups.all %}
-            <tr>
-              <td><b>{{ group.name }}</b></td>
-              <td>
-                {% for family_member in group.user_set.all %}
-                {{ family_member.last_name }} {{ family_member.first_name }}<br />
-                {% endfor %}
-              </td>
-            </tr>
-            {% endfor %}
-            </tbody>
-          </table>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
-        </div>
-        </div>
-      </div>
-    </div>
-    
-    <!-- Modal 2 -->
+    </main>
+
+    <!-- Modal 2: Payment Status (Retain only the Payment Modal) -->
     <div class="modal fade" id="service2Modal" tabindex="-1" role="dialog" aria-labelledby="service2ModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="service2ModalLabel">Tình trạng đóng phí cho tổ dân phố</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="service2ModalLabel">Tình trạng đóng phí cho tổ dân phố</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th scope="col">Khoản Thu</th>
+                                <th scope="col">Phí</th>
+                                <th scope="col">Đã Đóng</th>
+                                <th scope="col">Hạn Nộp</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% if user_info_list %}
+                                {% for info in user_info_list %}
+                                    <tr>
+                                        <td>{{ info.khoan_thu }}</td>
+                                        <td>{{ info.phi }} đồng</td>
+                                        <td>{% if info.da_dong %} Đã đóng {% else %} Chưa đóng {% endif %}</td>
+                                        <td>{{ info.han_nop }}</td>
+                                    </tr>
+                                {% endfor %}
+                            {% else %}
+                                <tr>
+                                    <td colspan="4">Chưa có thông tin đóng phí.</td>
+                                </tr>
+                            {% endif %}
+                        </tbody>
+                    </table>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
+                </div>
+            </div>
         </div>
-        <div class="modal-body">
-          <table class="table">
-            <thead>
-            <tr>
-              <th scope="col">Họ và tên</th>
-              <th scope="col">Tình trạng đóng phí</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-              <td>{{ user.last_name }} {{ user.first_name }}</td>
-              <td>
-                {% if user.dongphi %}
-                <b>Đã đóng phí</b>
-                {% else %}
-                <b>Chưa đóng phí</b>, vui lòng hoàn thành sớm với kế toán tổ dân phố
-                {% endif %}
-              </td>
-            </tr>
-            </tbody>
-          </table>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
-        </div>
-        </div>
-      </div>
     </div>
-    
-    <!-- Modal 3 -->
-    <div class="modal fade" id="service3Modal" tabindex="-1" role="dialog" aria-labelledby="service3ModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="service3ModalLabel">Danh sách đóng góp cho tổ dân phố (Công khai)</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        </div>
-        <div class="modal-body">
-          <table class="table">
-            <thead>
-            <tr>
-              <th scope="col">Họ và tên</th>
-              <th scope="col">Số tiền đóng góp</th>
-              <th scope="col">Sự kiện</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for user_info in user_info_list %}
-            <tr>
-              <td>{{ user_info.last_name }} {{ user_info.first_name }}</td>
-              <td>{{ user_info.donggop }} đồng</td>
-              <td><span>{{ user_info.sukien }}</span></td>
-            </tr>
-            {% endfor %}
-            </tbody>
-          </table>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
-        </div>
-        </div>
-      </div>
-    </div>
-    
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
     <!-- Footer -->
-    <footer class="footer mt-auto py-3">
-        <div class="container text-center">
-            <span class="text-muted">© 2024.1 - Nhập môn Công nghệ Phần mềm - Nhóm 10.</span>
-        </div>
+    <footer class="footer mt-auto">
+        <span class="text-muted">© 2024.1 - Nhập môn Công nghệ Phần mềm - Nhóm 10.</span>
     </footer>
 
     <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
-
