--- a/nmcnpmapp/templates/app/wait.html
+++ b/nmcnpmapp/templates/app/wait.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trang chủ - Hệ thống Quản lý Thu phí</title>
-
+    {% load static %}
     <link rel="stylesheet" href="/static/css/wait.css">
     <link rel="stylesheet" href="/static/css/newstyles.css">
     <link rel="stylesheet" href="/static/css/responsive-tablet.css">
