--- a/nmcnpmapp/templates/app/homepage.html
+++ b/nmcnpmapp/templates/app/homepage.html
@@ -9,29 +9,11 @@
         {% load static %}
     
         <!-- Stylesheets -->
-        <link rel="stylesheet" href="{% static 'css/home.css' %}?v=1">
+        <link rel="stylesheet" href="{% static 'css/home.css' %}?v=3">
         <link rel="stylesheet" href="{% static 'css/newstyles.css' %}">
-        <!-- <link rel="stylesheet" href="{% static 'css/responsive-tablet.css' %}"> -->
-        <!-- <link rel="stylesheet" href="{% static 'css/responsive-mobile.css' %}"> -->
+        <link rel="stylesheet" href="{% static 'css/responsive-tablet.css' %}">
+        <link rel="stylesheet" href="{% static 'css/responsive-mobile.css' %}">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-
-        <style>
-            body, html {
-                height: 100%;
-                margin: 0;
-                display: flex;
-                flex-direction: column;
-            }
-
-            .content {
-                flex: 1;
-            }
-
-            .footer {
-                background-color: #f8f9fa;
-                padding: 10px 0;
-            }
-        </style>
     </head>
 <body>
     <!-- Navbar -->
