--- a/nmcnpmapp/templates/app/member.html
+++ b/nmcnpmapp/templates/app/member.html
@@ -61,12 +61,15 @@
         }
     </style>
     <!-- Header -->
-    <header class="homepage-header" style="background-color: #007bff; color: white; text-align: center; padding: 50px 0;">
+    <header class="homepage-header">
         <div class="govuk-width-container">
             <div class="homepage-header__title-container">
-                <h1 class="homepage-header__title" style="font-size: 2.5rem; font-weight: bold;">
-                    Danh sách Thành viên Gia đình
+                <h1 class="homepage-header__title">
+                    Hệ thống Quản lý Thu phí
                 </h1>
+                <span class="homepage-header__intro">
+                    Chung cư CNPM - Hà Nội
+                </span>
             </div>
         </div>
     </header>
