--- a/nmcnpmapp/templates/app/service.html
+++ b/nmcnpmapp/templates/app/service.html
@@ -8,63 +8,11 @@
     {% load static %}
     
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="{% static 'css/home.css' %}">
+    <link rel="stylesheet" href="{% static 'css/home.css' %}?v=3">
     <link rel="stylesheet" href="{% static 'css/newstyles.css' %}">
     <link rel="stylesheet" href="{% static 'css/responsive-tablet.css' %}">
     <link rel="stylesheet" href="{% static 'css/responsive-mobile.css' %}">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-
-    <style>
-        /* CSS for a sticky footer */
-        body, html {
-            height: 100%;
-            margin: 0;
-            display: flex;
-            flex-direction: column;
-        }
-
-        .content {
-            flex: 1;
-        }
-
-        .footer {
-            background-color: #f8f9fa;
-            padding: 10px 0;
-        }
-        /* General Header Styling with Centered Text */
-        .homepage-header {
-            background: url("{% static 'img/building.png' %}") no-repeat center center; /* Set the background image */
-            background-size: cover; /* Ensure the background covers the entire header without stretching */
-            background-position: center center; /* Center the image */
-            color: white;
-            display: flex;
-            align-items: center; /* Center content vertically */
-            justify-content: center; /* Center content horizontally */
-            text-align: center;
-            height: 40vh; /* Height of the header */
-            position: relative;
-            padding: 0 20px;
-        }
-
-        /* Title Styling */
-        .homepage-header__title {
-            font-size: 4rem; /* Increased font size for the title */
-            font-weight: bold;
-            margin: 0;
-            color: #fdfdfd; /* Soft white */
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Subtle shadow for contrast */
-        }
-
-        /* Subtitle Styling */
-        .homepage-header__intro {
-            font-size: 2.5rem; /* Increased font size for the subtitle */
-            font-weight: 500;
-            margin-top: 5px;
-            color: #dddacc; /* Subtle golden tone */
-            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5); /* Softer shadow */
-        }
-
-    </style>
 </head>
 <body>
     <!-- Navbar -->
@@ -98,25 +46,6 @@
         </div>
     </nav>
   </head>
-  <style>
-    /* CSS for a sticky footer */
-    body, html {
-        height: 100%;
-        margin: 0;
-        display: flex;
-        flex-direction: column;
-    }
-
-    .content {
-        flex: 1;
-    }
-
-    .footer {
-        background-color: #f8f9fa;
-        padding: 10px 0;
-        text-align: center; /* Center-align the footer text */
-    }
-</style>
 </head>
 
     <!-- Header -->
