--- a/nmcnpmapp/static/css/home.css
+++ b/nmcnpmapp/static/css/home.css
@@ -16,11 +16,12 @@ body, html {
 
 /* General Header Styling with Centered Text */
 .homepage-header {
-    background: url("/static/img/building.png") no-repeat center center; /* Set the background image */
+    background: url('/static/img/building.png') no-repeat center center; /* Set the background image */
     background-size: cover; /* Ensure the background covers the entire header without stretching */
     background-position: center center; /* Center the image */
     color: white;
     display: flex;
+    align-items: center; /* Center content vertically */
     justify-content: center; /* Center content horizontally */
     text-align: center;
     height: 40vh; /* Height of the header */
@@ -46,40 +47,52 @@ body, html {
     text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5); /* Softer shadow */
 }
 
+
 .custom-div3 {
-    position: relative;
+    width: 13%;
+    text-align: center;
     z-index: 10;
 }
 
+.user {
+    border-radius: 10px;
+    background-color: #456088;
+    border: #456088 1px solid;
+    color: white;
+    font-size: large;
+}
+
+.user:hover {
+    color: #87A4CF;
+}
+
 .sub-user {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    background-color: white;
-    color: black;
-    padding: 10px;
-    list-style: none;
-    border: 1px solid #ddd;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Add shadow for depth */
-    border-radius: 5px; /* Rounded corners */
-    z-index: 15;
     display: none;
-    min-width: 150px; /* Set a minimum width */
+    width: 20%;
+    margin: 0 auto 0 21%;
+    position: absolute;
+    top: 45px;
+    left: 66%;
 }
 
-.sub-user li {
-    padding: 5px 10px;
-    font-size: 1rem;
+.sub-user>li {
+    margin: 0;
 }
 
-.sub-user li a {
+.sub-user>li>a {
+    display: block;
     color: #333;
-    text-decoration: none;
+    width: 40%;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border: #333 1px solid;
+    text-align: center;
+    background-color: white;
 }
 
-.sub-user li a:hover {
-    color: #007bff; /* Highlight color on hover */
-    text-decoration: underline;
+.sub-user>li>a:hover {
+    color: #87A4CF;
+    text-decoration: none;
 }
 
 .custom-div3:hover .sub-user {
