--- a/nmcnpmapp/templates/app/changepassword.html
+++ b/nmcnpmapp/templates/app/changepassword.html
@@ -32,10 +32,23 @@
                 <li class="nav-item"><a class="nav-link" href="/notification">Thông báo</a></li>                
             </ul>
             
-            <div class="custom-div3">
+            {% if user.is_authenticated %}
+            <!-- Dropdown for authenticated user -->
+            <div class="navbar-nav ml-auto dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Xin chào, {{ user.username }}
+                </a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
+                    <a class="dropdown-item" href="/changepassword">Đổi mật khẩu</a>
+                    <a class="dropdown-item" href="/logout">Đăng xuất</a>
+                </div>
+            </div>
+            {% else %}
+            <div class="navbar-nav ml-auto">
                 <a class="btn btn-outline-primary mr-2" href="/login">Đăng nhập</a>
                 <a class="btn btn-outline-success" href="/signup">Đăng ký</a>
             </div>
+            {% endif %}
         </div>
     </nav>
 
