--- a/nmcnpmapp/templates/app/member.html
+++ b/nmcnpmapp/templates/app/member.html
@@ -27,15 +27,18 @@
                 <li class="nav-item active"><a class="nav-link" href="/notification">Thông báo</a></li>                
             </ul>
             {% if user.is_authenticated %}
-            <div class="custom-div3">
-                <button class="user">{{ user.username }}</button>
-                <ul class="sub-user">
-                    <li><a href="/changepassword">Đổi mật khẩu</a></li>
-                    <li><a href="/logout">Đăng xuất</a></li>
-                </ul>
+            <!-- Dropdown for authenticated user -->
+            <div class="navbar-nav ml-auto dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Xin chào, {{ user.username }}
+                </a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
+                    <a class="dropdown-item" href="/changepassword">Đổi mật khẩu</a>
+                    <a class="dropdown-item" href="/logout">Đăng xuất</a>
+                </div>
             </div>
             {% else %}
-            <div class="navbar-nav">
+            <div class="navbar-nav ml-auto">
                 <a class="btn btn-outline-primary mr-2" href="/login">Đăng nhập</a>
                 <a class="btn btn-outline-success" href="/signup">Đăng ký</a>
             </div>
