--- a/nmcnpmapp/templates/app/wait.html
+++ b/nmcnpmapp/templates/app/wait.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trang chủ - Hệ thống Quản lý Thu phí</title>
     {% load static %}
+    <link rel="stylesheet" href="/static/css/msg.css">
     <link rel="stylesheet" href="/static/css/wait.css">
     <link rel="stylesheet" href="/static/css/newstyles.css">
     <link rel="stylesheet" href="/static/css/responsive-tablet.css">
@@ -15,6 +16,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
     <style>
         /* CSS for a sticky footer */
         body, html {
@@ -82,20 +85,14 @@
                 <li class="nav-item"><a class="nav-link" href="/contact">Liên hệ</a></li>                
                 <li class="nav-item"><a class="nav-link" href="/contact">Thông báo</a></li>                
             </ul>
-            {% if user.is_approved %}
-            <div class="custom-div3">
-                <button class="user">{{ user.username }}</button>
-                <ul class="sub-user">
-                    <li>
-                        <a href="/changepassword">Đổi mật khẩu</a>
-                    </li>
-                    <li>
-                        <a href="/logout">Đăng xuất</a>
-                    </li>
-                </ul>
+            {% if user.is_authenticated %}
+            <div class="navbar-nav ml-auto">
+                <span class="navbar-text mr-3">Xin chào, {{ user.username }}</span>
+                <a class="btn btn-outline-secondary mr-2" href="/changepassword">Đổi mật khẩu</a>
+                <a class="btn btn-outline-danger" href="/logout">Đăng xuất</a>
             </div>
             {% else %}
-            <div class="navbar-nav">
+            <div class="navbar-nav ml-auto">
                 <a class="btn btn-outline-primary mr-2" href="/login">Đăng nhập</a>
                 <a class="btn btn-outline-success" href="/signup">Đăng ký</a>
             </div>
@@ -133,10 +130,28 @@
         </div>
     </footer>
 
-    <!-- Scripts -->
+    <!-- Toast messages -->
+    {% if messages %}
+    <div id="toast-container">
+        {% for message in messages %}
+            <div class="toast {{ message.tags }}">{{ message }}</div>
+        {% endfor %}
+    </div>
+    {% endif %}
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const toasts = document.querySelectorAll('.toast');
+            toasts.forEach(toast => {
+                setTimeout(() => {
+                    toast.style.display = 'none';
+                }, 3500); // 3.5s để biến mất
+            });
+        });
+    </script>
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
