--- a/nmcnpmapp/templates/app/changepassword.html
+++ b/nmcnpmapp/templates/app/changepassword.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/static/css/newstyles.css">
     <link rel="stylesheet" href="/static/css/responsive-tablet.css">
     <link rel="stylesheet" href="/static/css/responsive-mobile.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
