--- a/nmcnpmapp/templates/registration/login.html
+++ b/nmcnpmapp/templates/registration/login.html
@@ -66,11 +66,27 @@
                                         <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Đăng nhập</h5>
                                         
                                         <div class="form-outline mb-4">
-                                            <input type="text" id="username" name="username" class="form-control form-control-lg" placeholder="Tên đăng nhập" />
+                                            <div class="input-group">
+                                                <div class="input-group-prepend">
+                                                    <span class="input-group-text" id="inputGroupPrepend">
+                                                        <i class="fas fa-user"></i>
+                                                    </span>
+                                                </div>
+                                                <input type="text" id="username" name="username" class="form-control form-control-lg"
+                                                    placeholder="Tên đăng nhập" aria-describedby="inputGroupPrepend" />
+                                            </div>
                                         </div>
-
+                                        
                                         <div class="form-outline mb-4">
-                                            <input type="password" id="password" name="password" class="form-control form-control-lg" placeholder="Mật khẩu" />
+                                            <div class="input-group">
+                                                <div class="input-group-prepend">
+                                                    <span class="input-group-text" id="inputGroupPrepend">
+                                                        <i class="fas fa-lock"></i>
+                                                    </span>
+                                                </div>
+                                                <input type="password" id="password" name="password" class="form-control form-control-lg"
+                                                    placeholder="Mật khẩu" aria-describedby="inputGroupPrepend" />
+                                            </div>
                                         </div>
 
                                         <div class="pt-1 mb-4">
