--- a/nmcnpmapp/templates/app/service.html
+++ b/nmcnpmapp/templates/app/service.html
@@ -145,8 +145,8 @@
                             </tr>
                         </thead>
                         <tbody>
-                            {% if user_info_list %}
-                                {% for info in user_info_list %}
+                            {% if payment_info_list %}
+                                {% for info in payment_info_list %}
                                     <tr>
                                         <td>{{ info.khoan_thu }}</td>
                                         <td>{{ info.phi }} đồng</td>
