--- a/nmcnpmapp/templates/app/add_member.html
+++ b/nmcnpmapp/templates/app/add_member.html
@@ -51,7 +51,7 @@
             {% endif %}
         </div>
     </nav>
-     c  
+
     <!-- Header Section -->
     <header class="homepage-header" style="background-color: #007bff; color: white; text-align: center; padding: 50px 0;">
         <div class="container">
@@ -75,8 +75,8 @@
                     <input type="text" id="last_name" name="last_name" class="form-control" required>
                 </div>
                 <div class="form-group">
-                    <label for="age">Tuổi:</label>
-                    <input type="number" id="age" name="age" class="form-control" required>
+                    <label for="date_of_birth">Ngày sinh:</label>
+                    <input type="date" id="date_of_birth" name="date_of_birth" class="form-control" required>
                 </div>
                 <div class="form-group">
                     <label for="email">Email:</label>
