--- a/nmcnpmapp/templates/app/member.html
+++ b/nmcnpmapp/templates/app/member.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="{% static 'css/home.css' %}">
     <link rel="stylesheet" href="{% static 'css/newstyles.css' %}">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+
 </head>
 <body>
     <!-- Navbar -->
@@ -20,11 +22,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item"><a class="nav-link" href="/">Trang chủ</a></li>
-                <li class="nav-item"><a class="nav-link" href="/service">Dịch vụ</a></li>
-                <li class="nav-item"><a class="nav-link" href="/about">Giới thiệu</a></li>
-                <li class="nav-item"><a class="nav-link" href="/contact">Liên hệ</a></li>                
-                <li class="nav-item active"><a class="nav-link" href="/notification">Thông báo</a></li>                
+                <li class="nav-item active"><a class="nav-link" href="/"><i class="fas fa-home"></i> Trang chủ</a></li>
+                <li class="nav-item"><a class="nav-link" href="/service"><i class="fas fa-cogs"></i> Dịch vụ</a></li>
+                <li class="nav-item"><a class="nav-link" href="/about"><i class="fas fa-info-circle"></i> Giới thiệu</a></li>
+                <li class="nav-item"><a class="nav-link" href="/contact"><i class="fas fa-envelope"></i> Liên hệ</a></li>
+                <li class="nav-item"><a class="nav-link" href="/notification"><i class="fas fa-bell"></i> Thông báo</a></li>
             </ul>
             {% if user.is_authenticated %}
             <!-- Dropdown for authenticated user -->
